<resources>
    <string name="app_name">Cash Notes</string>


    <string name="empty_string" />
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="go_back">Go back</string>
    <string name="all">All</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="colors">Colors</string>
    <string name="choose_color">Choose color</string>
    <string name="default_string">DEFAULT</string>


    <string name="edit_account">Edit Account</string>
    <string name="accounts">Accounts</string>
    <string name="created_at">Created at</string>
    <string name="last_updated">Last updated</string>
    <string name="expense">Expense</string>

    <string name="share_file_to">Share file to :</string>
    <string name="app_name_upper_case">CASH NOTE</string>
    <string name="edit_transaction">Edit transaction</string>


    <string name="current_year">2021</string>
    <string name="apply_changes">Apply changes</string>
    <string name="export_to">Export from</string>
    <string name="empty_data_desc">Nothing Here.</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="account_name">Account Name</string>
    <string name="account_description">Description</string>
    <string name="account_description_hint">Account Description</string>
    <string name="transaction_description_hint">Transaction Description</string>
    <string name="category">Category</string>
    <string name="balance">Balance</string>
    <string name="balance_text">balance</string>
    <string name="transaction_balance_hing">Type an Amount</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="transaction_date_hint">Choose a Date</string>

    <string name="transaction_notes_hint">Write a Note.</string>
    <string name="month">Month</string>
    <string name="income">Income</string>
    <string name="transactions">Transactions</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="over_view">Over View</string>
    <string name="filter">Filter</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>

    <string name="search">Search</string>
    <string name="toggle_night_mode">Toggle Night Mode</string>

    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>

    <string name="transaction_date_field_error">this Date is already passed , Enter a new one</string>
    <string name="transaction_description_error">the field is empty, you should enter something</string>
    <string name="account_name_field_error">the field is empty, you should enter something…</string>

    <string name="delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_transaction_title">Delete Transaction: </string>
    <string name="dialog_delete_account_title">Delete Account</string>


    <string name="show_transaction_created_at">Created At</string>

    <string name="transactions_text">Transactions</string>

    <string name="latest_accounts">Latest Accounts</string>
    <string name="latest_transactions">Latest Transactions</string>

    <string name="add_new_transaction_title">Add New Transaction</string>
    <string name="add_new_transaction_description">Description :</string>
    <string name="add_new_account">Add New Account</string>
    <string name="account_name_hint">Type a Name</string>
    <string name="transactions_count">Transaction Count</string>
    <string name="source">Source</string>
    <string name="search_for_transactions">Search For Transactions</string>
    <string name="sign_out">Sign out</string>
    <string name="account_source">Account Source</string>
    <string name="login">Login</string>
    <string name="please_wait">Please Wait</string>
    <string name="app_credit_free_pick">Some of the icons made by Freepik from www.flaticon.com</string>
    <string name="summary">Summary</string>


</resources>
