<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_accounts"
            android:icon="@drawable/ic_outline_account_wallet"
            android:title="@string/accounts" />
        <item
            android:id="@+id/drawer_menu_overview"
            android:icon="@drawable/ic_over_view_black_24dp"
            android:title="@string/over_view" />
        <item
            android:id="@+id/drawer_menu_filter"
            android:icon="@drawable/ic_calender_black_24dp"
            android:title="@string/filter"
            android:checkable="false"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_menu_user"
            android:icon="@drawable/ic_outline_account_box_black"
            android:title="@string/user"
            android:visible="false"/>
        <item
            android:id="@+id/drawer_menu_toggle_night_mode"
            android:icon="@drawable/ic_toggle_night_mode"
            android:title="@string/toggle_night_mode"
            app:actionLayout="@layout/drawer_toggle_list_grid_view_switch"/>
        <item
            android:id="@+id/drawer_menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />


    </group>

</menu>