<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/summary_graph_card_view"
            style="@style/overview_card_style"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/overview_summary_chart_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/summary"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/monthly_summary_chart"
                    style="@style/overview_chart_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/transaction_chart_card_view"
            style="@style/overview_card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="@dimen/spacing_tiny"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/overview_transaction_chart_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_small"
                    android:layout_margin="@dimen/spacing_small"
                    android:text="Line Chart"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAlignment="center" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/expense_chart"
                    style="@style/overview_chart_style"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/spacing_normal"
                    />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/balance_graph_card_view"
            style="@style/overview_card_style"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/overview_balance_title"
                    style="@style/OverViewCardTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:text="@string/balance_text"
                    android:textAllCaps="true"/>


                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/balance_history_chart"
                    style="@style/overview_chart_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/overview_balance_title" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/accounts_card_view"
            style="@style/overview_card_style"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/overview_accounts_title"
                    style="@style/OverViewCardTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_accounts"
                    android:textAllCaps="true"
                    android:textAlignment="center"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/accounts_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/overview_accounts_title" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recent_transaction_card_view"
            style="@style/overview_card_style"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/overview_transaction_title"
                    style="@style/OverViewCardTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/latest_transactions"
                    android:textAllCaps="true"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_transaction_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/overview_transaction_title" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>

